# light_for_hardware

./: CMakeLists.txt  README.md
components/BSP/: CMakeLists.txt  README.md  uart.c  uart.h
components/BSP/AlarmMusic/: CMakeLists.txt  alarm_music.c  alarm_music.h
components/BSP/App/: app_controller.c  app_controller.h
components/BSP/Audio/: audio_hw.c  audio_hw.h  audio_player.c  audio_player.h  audio_sdcard.c  audio_sdcard.h
components/BSP/HTTP/: http_request.c  http_request.h
components/BSP/Input/: xl9555_keys.c  xl9555_keys.h
components/BSP/Protocol/: protocol.c  protocol.h
components/BSP/RTC/: rtc_service.c  rtc_service.h
components/BSP/SleepAnalysis/: sleep_analysis.cpp  sleep_analysis.h
components/BSP/UART/: uart.h
components/Middlewares/: README.md
main/: CMakeLists.txt  main.c
